--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2"
   }
