--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2"
   }
